--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/react-router": "^1.6.0",
-    "@tabler/icons-react": "^3.34.0",
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-table": "^8.21.3",
+    "ace-builds": "^1.43.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.517.0",
     "motion": "^12.18.1",
+    "prismjs": "^1.30.0",
     "react": "^19.1.0",
+    "react-ace": "^14.0.1",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "react-simple-code-editor": "^0.14.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10"
   },
