--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@clerk/react-router": "^1.6.2",
+    "@google/generative-ai": "^0.24.1",
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-table": "^8.21.3",
     "ace-builds": "^1.43.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.517.0",
     "motion": "^12.18.1",
     "prismjs": "^1.30.0",
@@ -25,8 +28,11 @@
     "react-ace": "^14.0.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
     "react-simple-code-editor": "^0.14.1",
+    "react-webcam": "^7.2.0",
+    "react-wrap-balancer": "^1.1.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10"
   },
